Fixed more issue after static code check